; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm.c_vm_gpa2hva.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm.c_vm_gpa2hva.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @vm_gpa2hva(%struct.vm* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.vm*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store %struct.vm* %0, %struct.vm** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.vm*, %struct.vm** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = call i64 @vm_get_memobj(%struct.vm* %10, i64 %11, i64 %12, i64* %9, i8** %8)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %22

16:                                               ; preds = %3
  %17 = load i8*, i8** %8, align 8
  %18 = ptrtoint i8* %17 to i64
  %19 = load i64, i64* %9, align 8
  %20 = add i64 %18, %19
  %21 = inttoptr i64 %20 to i8*
  store i8* %21, i8** %4, align 8
  br label %22

22:                                               ; preds = %16, %15
  %23 = load i8*, i8** %4, align 8
  ret i8* %23
}

declare dso_local i64 @vm_get_memobj(%struct.vm*, i64, i64, i64*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
